feat: add Dockerfile, K8s manifests, ArgoCD app, GitHub Actions CI
- Dockerfile: multi-stage Python 3.13-slim, non-root user, /data PVC mount
- .dockerignore: exclude .venv, .env, DB, k8s dirs
- k8s/: namespace, configmap, pvc, deployment (Recreate strategy),
        service, ingress (nginx + cert-manager TLS), kustomization
- k8s/argocd-app.yaml: ArgoCD Application pointing to k8s/ on main
- k8s/scripts/gen-secret.ps1: generate secret.yaml from .env (not committed)
- .github/workflows/build-push.yaml: build+push to ghcr.io on push to main
- app/database.py: DATABASE_URL now reads from env var with sqlite fallback
- .gitignore: add k8s/secret.yaml

--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,13 @@ DISCORD_CLIENT_SECRET=
 
 # The URL Discord will redirect to after login
 # e.g. http://localhost:8000/auth/callback
-DISCORD_REDIRECT_URI=http://localhost:8000/auth/callback
+DISCORD_REDIRECT_URI=https://issuebell.com/auth/callback
 
-# ─── GitHub ────────────────────────────────────────────────────────────────────
-# Webhook secret (set this in each repo's webhook settings)
-GITHUB_WEBHOOK_SECRET=change-me-to-a-webhook-secret
+# ─── GitHub OAuth ────────────────────────────────────────────────────────────
+# Create an OAuth App at https://github.com/settings/developers
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GITHUB_REDIRECT_URI=https://issuebell.com/auth/github/callback
+
+# How often (seconds) to poll GitHub for new issues (default 300 = 5 min)
+POLL_INTERVAL=300
