--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,31 @@
+﻿annotated-types==0.7.0
+anyio==4.12.1
+APScheduler==3.11.2
+certifi==2026.1.4
+click==8.3.1
+colorama==0.4.6
 fastapi==0.115.6
-uvicorn[standard]==0.34.0
-sqlalchemy==2.0.36
+h11==0.16.0
+httpcore==1.0.9
+httptools==0.7.1
 httpx==0.28.1
-python-dotenv==1.0.1
-pydantic-settings==2.7.0
-jinja2==3.1.5
+idna==3.11
 itsdangerous==2.2.0
-starlette==0.41.3
+Jinja2==3.1.5
+MarkupSafe==3.0.3
+pillow==12.1.1
+pydantic==2.12.5
+pydantic-settings==2.7.0
+pydantic_core==2.41.5
+python-dotenv==1.0.1
 python-multipart==0.0.20
+PyYAML==6.0.3
+SQLAlchemy==2.0.36
+starlette==0.41.3
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.3
+tzlocal==5.3.1
+uvicorn==0.34.0
+watchfiles==1.1.1
+websockets==16.0
