chore: cleanup yaml files - remove gateway from kustomization, increase pvc to 10Gi, fix workflow comment

--- a/.github/workflows/build-push.yaml
+++ b/.github/workflows/build-push.yaml
@@ -7,7 +7,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}   # back1ash/issuebell → ghcr.io/back1ash/issuebell
+  IMAGE_NAME: ${{ github.repository }}   # ghcr.io/back1ash/issuebell
 
 jobs:
   build-push:
