chore: apply cert-manager resources manually (gateway namespace conflict)

--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -10,3 +10,5 @@ resources:
   - deployment.yaml
   - service.yaml
   - httproute.yaml
+  # cluster-issuer.yaml and certificate.yaml are applied separately
+  # (they must live in 'gateway' namespace, not 'issuebell')
