feat: add ReferenceGrant and include all gateway resources in kustomization
- Remove global namespace override from kustomization.yaml (each manifest
  now declares its own namespace)
- Add referencegrant.yaml to allow HTTPRoutes in issuebell ns to attach
  to prod-gateway in gateway ns
- Include certificate.yaml, cluster-issuer.yaml, and referencegrant.yaml
  in kustomization resources so ArgoCD applies everything in one sync

--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -1,8 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-namespace: issuebell
-
 resources:
   - namespace.yaml
   - configmap.yaml
@@ -10,5 +8,6 @@ resources:
   - deployment.yaml
   - service.yaml
   - httproute.yaml
-  # cluster-issuer.yaml and certificate.yaml are applied separately
-  # (they must live in 'gateway' namespace, not 'issuebell')
+  - referencegrant.yaml
+  - cluster-issuer.yaml
+  - certificate.yaml
