--- a/k8s/httproute.yaml
+++ b/k8s/httproute.yaml
@@ -12,7 +12,11 @@ spec:
   hostnames:
   - "issuebell.com"
   rules:
-  - filters:
+  - matches:
+    - path:
+        type: PathPrefix
+        value: /
+    filters:
     - type: RequestRedirect
       requestRedirect:
         scheme: https
