--- a/k8s/argocd-app.yaml
+++ b/k8s/argocd-app.yaml
@@ -14,6 +14,15 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: issuebell
+  ignoreDifferences:
+  - group: cert-manager.io
+    kind: ClusterIssuer
+    jsonPointers:
+    - /status
+  - group: gateway.networking.k8s.io
+    kind: HTTPRoute
+    jsonPointers:
+    - /status
   syncPolicy:
     automated:
       prune: true       # delete resources removed from git
