--- a/k8s/cluster-issuer.yaml
+++ b/k8s/cluster-issuer.yaml
@@ -9,10 +9,9 @@ spec:
     privateKeySecretRef:
       name: letsencrypt-prod-key
     solvers:
-    - http01:
-        gatewayHTTPRoute:
-          parentRefs:
-          - name: prod-gateway
-            namespace: gateway
-            kind: Gateway
+    - dns01:
+        cloudflare:
+          apiTokenSecretRef:
+            name: cloudflare-api-token
+            key: api-token
             sectionName: http
