--- a/k8s/secret.yaml
+++ b/k8s/secret.yaml
@@ -12,3 +12,7 @@ stringData:
   GITHUB_CLIENT_ID: ""
   GITHUB_CLIENT_SECRET: ""
   GITHUB_WEBHOOK_SECRET: ""
+  # PostgreSQL password — must match DATABASE_URL below
+  POSTGRES_PASSWORD: ""
+  # Full connection string: postgresql://issuebell:<POSTGRES_PASSWORD>@postgres:5432/issuebell
+  DATABASE_URL: ""
