--- a/k8s/pvc.yaml
+++ b/k8s/pvc.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: issuebell-data
+  name: postgres-data
   namespace: issuebell
 spec:
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 10Gi
+      storage: 5Gi
   # storageClassName: "" # set if your cluster requires a specific class
