--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ pillow==12.1.1
 pydantic==2.12.5
 pydantic-settings==2.7.0
 pydantic_core==2.41.5
+psycopg2-binary==2.9.10
 python-dotenv==1.0.1
 python-multipart==0.0.20
 PyYAML==6.0.3
