--- a/k8s/postgres.yaml
+++ b/k8s/postgres.yaml
@@ -32,6 +32,8 @@ spec:
                 secretKeyRef:
                   name: issuebell-secret
                   key: POSTGRES_PASSWORD
+            - name: PGDATA
+              value: /var/lib/postgresql/data/pgdata
           volumeMounts:
             - name: postgres-data
               mountPath: /var/lib/postgresql/data
