--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -7,3 +7,4 @@ data:
   DISCORD_REDIRECT_URI: "https://issuebell.com/auth/callback"
   GITHUB_REDIRECT_URI: "https://issuebell.com/auth/github/callback"
   POLL_INTERVAL: "180"
+  ADMIN_DISCORD_ID: ""
